# automata-linux

./: .gitignore  .gitmodules  Cargo.toml  INSTALL.md  Makefile  README.md  atakit  atakit_0.1.4-1_all.deb  cvm-cli  cvm-cli.spec  docker-compose.yml  json_sig_tool.py  prometheus.yml  toolkit
.claude/: CLAUDE.md
Formula/: atakit.rb  cvm-cli.rb
controller/: Cargo.toml  Dockerfile  README.md  go.mod  main.go
controller/src/: main.rs
crates/atakit/: Cargo.toml
crates/atakit/src/: config.rs  main.rs  types.rs
crates/atakit/src/commands/: build_workload.rs  deploy.rs  deploy_raw.rs  manage.rs  mod.rs  publish_workload.rs  security.rs  sim_agent.rs
crates/atakit/src/commands/build_workload/: compose_parser.rs  packager.rs
crates/atakit/src/commands/deploy/: azure.rs  gcp.rs
crates/atakit/src/commands/deploy_raw/: aws.rs  azure.rs  gcp.rs
crates/atakit/src/commands/manage/: cleanup.rs  cleanup_local.rs  get_disk.rs  get_logs.rs  update_disk.rs  update_workload.rs
crates/atakit/src/commands/security/: download_provenance.rs  generate_livepatch_keys.rs  livepatch.rs  sign_image.rs  sign_livepatch.rs  verify_provenance.rs
crates/toolkit/: Cargo.toml
crates/toolkit/src/: config.rs  main.rs  state.rs  types.rs
crates/toolkit/src/agent/: client.rs
crates/toolkit/src/cloud/: gcp.rs
crates/toolkit/src/commands/: deploy.rs  destroy.rs  init.rs  logs.rs  measurements.rs  mod.rs  update.rs
crates/toolkit/src/commands/sim_agent/: mod.rs  routes.rs
crates/toolkit/src/disk/: docker_ops.rs  download.rs  mod.rs
crates/toolkit/src/templates/: cvm.yaml.template  docker-compose.yml
crates/toolkit/src/templates/config/cvm_agent/: cvm_agent_policy.json
crates/toolkit/src/templates/config/promtail/: promtail.yml
crates/toolkit/src/templates/config/scripts/: vmagent-entrypoint.sh
crates/toolkit/src/workload/: mod.rs  resolve.rs  templates.rs
debian/: changelog  control  copyright  rules
disktools/: Dockerfile  disk-ops.sh
docs/: ATTESTATION_VERIFICATION.md  architecture.md  config  cvm-agent-api.md  cvm-agent-image-signature-policy.md  cvm-agent-policy.md  detailed-cvm-walkthrough.md  livepatching.md  meminfo.patch  onchain-workflows.md  troubleshooting.md
(+96 files in other folders)
