[package]
name = "toolkit"
version = "0.2.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = { version = "2", features = ["serde"] }

# Async
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls", "blocking", "multipart"] }

# Crypto
sha2 = "0.10"
rand = "0.8"
hex = "0.4"

# Archive
flate2 = "1"
tar = "0.4"
zip = "2"

# File system
walkdir = "2"
tempfile = "3"

# Web framework (sim-agent)
axum = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Progress
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Dirs
dirs = "6"
shellexpand = "3"

# GCP SDK
google-cloud-compute-v1 = { version = "2", features = ["instances", "images", "firewalls", "addresses", "disks", "global-operations", "zone-operations"] }
gcp_auth = "0.12"
base64 = "0.22"
bytes = "1"
futures-util = "0.3"
urlencoding = "2"
rustls = { version = "0.23", features = ["ring"] }
